--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -20,7 +20,7 @@ jobs:
         pip install -r requirements.txt
 
     - name: Lint with flake8
-      run: flake8
+      run: flake8 hello.py
 
     - name: Test with pytest
-      run: unittest in tests.py
+      run: pytest tests.py
