--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -20,7 +20,7 @@ jobs:
         pip install -r requirements.txt
 
     - name: Lint with flake8
-      run: flake8 flask_app
+      run: flake8 app
 
     - name: Test with pytest
       run: pytest tests.py
